connect to remote databases

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL=postgresql://postgres:amin417838@localhost:5432/teachbase
-REDIS_URL=127.0.0.1:6379 
+DATABASE_URL=postgres://ekmipmnd:vbviugeWbGy7VnxE1E56LxjM8Yy2hELQ@rogue.db.elephantsql.com:5432/ekmipmnd
+REDIS_URL=redis-10260.c228.us-central1-1.gce.cloud.redislabs.com
 PORT=4000
 SESSION_SECRET=qowiueojwojfalksdjoqiwueo
 CORS_ORIGIN=http://localhost:3000
