optimize for deploying on heroku 3

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 SESSION_SECRET=qwoiuweqoiuwqeoiusdalkjwqoi
-CORS_ORIGIN=https://codeponder.com
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/lireddit2
-REDIS_URL=redis-10260.c228.us-central1-1.gce.cloud.redislabs.com:10260
+CORS_ORIGIN=https://share-education.vercel.app
+DATABASE_URL=postgres://ekmipmnd:vbviugeWbGy7VnxE1E56LxjM8Yy2hELQ@rogue.db.elephantsql.com:5432/ekmipmnd
+REDIS_URL=redis-10260.c228.us-central1-1.gce.cloud.redislabs.com
